turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: not found: value Black
    case Color.white => setCouleurBrosse(Black);baisseBrosse();leveBrosse();droite();avance()
                                         ^LangtonsAnt:3: error: not found: value white
    case Color.black => setCouleurBrosse(white);baisseBrosse();leveBrosse();droite();avance()
                                         ^