turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  getCouleurSol() match{
    case Color.white => setCouleurBrosse(Black);baisseBrosse();leveBrosse();droite();avance()
    case Color.black => setCouleurBrosse(white);baisseBrosse();leveBrosse();droite();avance()
  }
  
}